apps/argocd/overlay/argocd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    io.cilium/lb-ipam-ips: "10.44.0.11"
spec:
  type: LoadBalancer
