apps/argocd/overlay/argocd-network-policy.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd*
